# DSMKernel

./: CMakeLists.txt  GeodpyProject_SeismoApp.html  PythonApp_InteractiveMap.py  README.md  install.sh  ui_sidebar.py  window_ui.py
DSMKernelQt/: DSMKernelQt.pyproject  Windows.py  main.py  mainwindow.ui  resource.qrc
DSMKernelQt/music/: quatuor.m4a
examples/single_kernel/: CMakeLists.txt  database.inf.in  database.input.in  kernel.input.in  run_database.slurm  run_database.slurm.in  run_database_Lchunk.slurm.in
share/: CMakeLists.txt  fourier.f90  moduleKernel.f90  pinputDSM.f90  pinputKernel.f90  rotation.f90  searchForParams.f90  tmpfileNameGenerator.f90  tmpfileNameGenerator.f90~
src/KernelMaker/: .gitignore  CMakeLists.txt  CMakeLists.txt~  KernelMaker.f90  calculateK.f90  fourier.f90  localschema.f90  module.f90  others.f90
src/SGTpsv/: .gitignore  CMakeLists.txt  CMakeLists.txt~  SGTpsv-MPI.f90  others.f90
src/SGTpsvLChunk/: #modules.f90#  .gitignore  CMakeLists.txt  SGTpsv-MPI.f90  SGTpsv-MPI_scratch.f90  calmat.f90  dcsymbdl.f90  dsm_every_l.f90  modules.f90  others.f90  tmp_dsm_model.f90  trial.f90
src/SGTpsvLChunk/tmp/: setmt.f90  setmt.f90~
src/SGTpsvMax/: CMakeLists.txt  README  SGTpsv-MPI.f90  calmat.f90  dcsymbdl3.f90  dsm_every_l.f90  modules.f90  others.f90  pinputDSM.f90  trial.f90
src/SGTsh/: CMakeLists.txt  CMakeLists.txt~  SGTsh-MPI.f90  others.f90
src/SGTshMax/: CMakeLists.txt  modules.f90  others.f90
util/: DSMKernel.py
util/WindowSelectionTools/: window2kernelinf.py
util/modules/: DSMTk.py
utilpyqt/: .gitignore  DataProcessor_Fonctions.py  LogInWindow.py  MoonApp.py  PythonApp_InteractiveMap.py  Python_Menus_&_Toolbars.py  README.md  about.txt  config.yml  env.yml  environment-linux.yml  environment-windows.yml  environment.yml  example.py  firebase-secret.gitignore  lauching_window.py  loading_window.py  main.py  planetSelect.py  resource.qrc  toggle_checkbox2.py  trace_viewer.py  vers3.py  window_ui.py
utilpyqt/modules/: windowDSM.py
